<resources>
    <string name="app_name">Near by places</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="cafes">Cafes</string>
    <string name="bars">Bars</string>
    <string name="restaurants">Restaurants</string>
    <string name="find_near_by_places">Find near by places</string>
    <string name="finding_current_location">Finding current location...</string>
    <string name="refresh_current_location">Refresh current location</string>
    <string name="showing_the_image_of_the_place">Showing the image of the place</string>
</resources>