<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/home_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:weightSum="3.0"
    tools:context=".presentation.home.HomeActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/location"
            android:fontFamily="@font/roboto_bold"
            android:padding="30dp"
            android:text="@string/finding_current_location"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_location_update"
            android:contentDescription="@string/refresh_current_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_txt"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bars_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:layout_margin="40dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_rounded"
        android:padding="15dp"
        android:text="@string/bars"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cafes_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:layout_margin="40dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_rounded"
        android:padding="15dp"
        android:text="@string/cafes"
        android:textSize="20sp" />

    <Button
        android:id="@+id/restaurants_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:layout_margin="40dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_rounded"
        android:padding="15dp"
        android:text="@string/restaurants"
        android:textSize="20sp" />

</LinearLayout>
</layout>